--- a/podtnuxt/package.json
+++ b/podtnuxt/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "axios": "^0.19.2",
     "fast-average-color": "^6.0.2",
     "font-awesome": "^4.7.0",
     "font-awesome-icons": "^1.6.0",
+    "googleanalytics": "^0.4.0",
     "jquery": "^3.5.1",
     "next-routes": "^1.4.2",
     "nuxt": "^2.13.0",
